2007-09-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c: Fix missing syntax colouring when saving new files.


2007-09-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c, src/document.c:
   Rewrite document_find_by_filename() to work when the filename
   argument contains relative path elements or symlinks.


2007-09-03  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/makefile.win32, src/ui_utils.c, src/win32.c,
   plugins/makefile.win32:
   Sort list of files to build on Windows.
   Add geanyobject.c to the list of files to build on Windows.
   Fix some warnings and build errors on Windows.


2007-09-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c:
   Set copy lines default KB to Ctrl-Shift-C.
   Set cut lines default KB to Ctrl-Shift-X.
 * plugins/classbuilder.c, src/templates.c, src/keybindings.c,
   src/plugindata.h, src/callbacks.c, src/document.c, src/document.h,
   src/main.c, src/socket.c:
   Add text argument for document_new_file(), so that it's independent
   from filetype templates.
   Make File->New create a blank document, rather than using the None
   filetype template.
   Add None option for the 'New with Template' menu commands.
 * src/interface.c, geany.glade:
   Move 'Insert #include' menu item below other insert menu items.


2007-08-31  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c, doc/geany.txt, doc/geany.html,
   data/filetypes.common:
   Include \n\r newline chars in Scintilla whitespace chars.
 * data/filetypes.common:
   Undo last commit, because it makes selecting text with the mouse
   include all trailing lines with no wordchars on them.


2007-08-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/keybindings.c, geany.glade:
   Change 'Goto' to 'Go to' everywhere.
 * doc/geany.txt, doc/geany.html:
   Add Plugins section, describe using a second instance to edit