@@ -141,6 +141,8 @@ typedef enum
 	GEANY_KEYS_EDIT_SELECTLINE,
 	GEANY_KEYS_EDIT_SELECTPARAGRAPH,
 	GEANY_KEYS_EDIT_SCROLLTOLINE,
+	GEANY_KEYS_EDIT_SCROLLLINEUP,
+	GEANY_KEYS_EDIT_SCROLLLINEDOWN,
 	GEANY_KEYS_EDIT_INSERTALTWHITESPACE,
 
 	GEANY_KEYS_EDIT_AUTOCOMPLETE,
